# spin

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  RELEASE.md  dev.py  meson.build  noxfile.py  pyproject.toml
.github/workflows/: lint.yml  release.yml  test.sh  test.yml
custom/: __init__.py
dev/: meson.build  py.py
dev/cmds/: __init__.py  _build.py  _shell.py  _test.py  meson.build  util.py
devpy/: __init__.py  __main__.py  color_format.py  meson.build  sectioned_help.py
devpy/cmds/: __init__.py  _build.py  _doc.py  _shell.py  _test.py  meson.build  meson.py  util.py
devpy/tests/: meson.build  test_builtin_cmds.py  test_meson.py  test_util.py
example_pkg/: .gitattributes  .gitignore  meson.build  pyproject.toml
example_pkg/.devpy/: cmds.py
example_pkg/.spin/: cmds.py
example_pkg/doc/: conf.py  index.md  index.rst
example_pkg/example_pkg/: __init__.py  _core.pyi  coremodule.c  meson.build
example_pkg/example_pkg/submodule/: meson.build  shlib.c  shlib.h  shlib_dll.h
example_pkg/example_pkg/tests/: test_core.py
example_pkg_src/: meson.build  pyproject.toml
example_pkg_src/.spin/: cmds.py
example_pkg_src/src/: __init__.py  coremodule.c  meson.build
example_pkg_src/tests/: test_core.py
spin/: __init__.py  __main__.py  color_format.py  containers.py  sectioned_help.py
spin/cmds/: __init__.py  build.py  generic.py  meson.py  meta.py  pip.py  util.py
spin/tests/: conftest.py  test_build_cmds.py  test_cli.py  test_editable.py  test_extend_command.py  test_meson.py  test_test.py  test_util.py  testutil.py  util.py
