[project]
name = "example_pkg"
version = "0.0dev0"
requires-python = ">=3.7"
description = "DevPy Example Package"

[build-system]
build-backend = "mesonpy"
requires = [
  "meson-python>=0.13.0rc0",
]

[tool.devpy]
package = 'example_pkg'

[tool.devpy.commands]
# If you don't need sections, you can also provide a list of commands under [tool.devpy]:
#
# commands = [
#   "devpy.cmds.meson.build",
#   "devpy.cmds.meson.test",
#   "devpy.cmds.meson.shell",
#   "devpy.cmds.meson.ipython",
#   "devpy.cmds.meson.python",
#   "custom/cmds.py:example"
# ]

"Build" = [
  "devpy.cmds.meson.build",
  "devpy.cmds.meson.test",
  "devpy.cmds.build.sdist"
]
"Environments" = [
  "devpy.cmds.meson.shell",
  "devpy.cmds.meson.ipython",
  "devpy.cmds.meson.python"
]
"Extensions" = [".devpy/cmds.py:example"]
